docs(comments): add comprehensive Java 8-guided comments to Java 9-21 demo
To assist Java 8 users in upgrading and understanding modern Java
features, this change adds detailed Chinese code comments across demo files
from Java 9 through Java 21. Each section now explains what the feature
improves over Java 8, provides usage scenarios, pitfalls, and new best practices.
The comments are intended as an in-code evolution guide. A summary Markdown
guide was also added.

No functional code logic was changed. This is a documentation-only update,
intended to help readers learning Java 8 or modernizing legacy Java codebases.